# AI-Job-Recommender

./: .gitignore  README.md  app.py  main.py  pyproject.toml
backend/: main.py
backend/middleware/: auth.py
backend/src/: helper.py  job_api.py  resume_processor.py  skill_analyzer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.ts  style.css
frontend/src/components/: AnalysisManager.ts  ApiManager.ts  AppState.ts  AuthManager.ts  ErrorManager.ts  JobManager.ts  ProfileManager.ts  ReportManager.ts  UIHelpers.ts
frontend/src/components/Analysis/: AnalysisResults.tsx  AnalysisTab.tsx
frontend/src/components/Auth/: AuthSection.tsx  (+2 more)
frontend/src/config/: firebase.js
frontend/src/hooks/: useAppState.ts
frontend/src/services/: authService.ts  resumeService.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  helpers.ts
frontend_test/: App.tsx  app.config.js  app.json  babel.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend_test/src/config/: firebase.ts  theme.ts
frontend_test/src/navigation/: MainTabNavigator.tsx
frontend_test/src/screens/: AnalysisScreen.tsx  AuthScreen.tsx  LoadingScreen.tsx  ProfileScreen.tsx  ProfileSetupScreen.tsx  ReportScreen.tsx  SearchScreen.tsx  UploadScreen.tsx
frontend_test/src/services/: apiService.ts  authService.ts
frontend_test/src/types/: index.ts
frontend_test/src/utils/: helpers.ts
middleware/: auth.py
src/: helper.py  job_api.py  resume_processor.py  skill_analyzer.py
(+12 files in other folders)
